# google-meet-slackbot

./: .dockerignore  .env.docker  .env.example  .env.production  .gitignore  Cargo.toml  DOCKER.md  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  docker-entrypoint.sh  security-check.sh
.github/workflows/: ci.yml  dependency-update.yml  pr-checks.yml
.sqlx/: query-23f9a424d161887af4a1f1a9578e8c4a0d3f19701329434a990a4f509c8b8021.json  query-261d94ce675df3d4dd6b89f844f8dc1808c3746f6bde9baff56251d7e55e6448.json  query-6f644c4178df4524ca85996b1c175fcfa71d723be2e866e61281f27f9cc933aa.json  query-7b8a1927750f90195473f1d2b3f370deb693419002547198a957a5511ed6f249.json  query-987c494a3874abba4ed34123329b681e265342a5e5fb78ff78895c1fb91f043d.json  query-c1e6724c3f8ffc0f3814072561f914a0d4f4ad038c5b8b1bf6c564d49d536bde.json  query-ffdf9acbc7e40f19a662f447a1068719b16af020c268df1d4421e1b4d6967b2d.json
migrations/: 001_initial.sql
src/: crypto.rs  google.rs  main.rs  rate_limiter.rs  slack.rs  validation.rs
src/auth/: oauth.rs
src/database/: mod.rs  models.rs
src/handlers/: auth.rs  mod.rs  slack.rs
src/utils/: mod.rs  slack_verification.rs
