[package]
name = "meet-slack-bot"
version = "0.1.0"
edition = "2021"
default-run = "meet-slack-bot"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }
reqwest = { version = "0.11", features = ["json"] }
oauth2 = "4.4"
url = "2.4"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenv = "0.15"
base64 = "0.22"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
ring = "0.17"
aes-gcm = "0.10"
rand = "0.8"
regex = "1.10"
